week5-platform-engineering/W5D7/yaml/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: platform-route

spec:

  parentRefs:
  - name: platform-gateway

  rules:
  - backendRefs:
    - name: platform-demo
      port: 80
